<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sudoku</string>

    <string name="jedan">1</string>
    <string name="dva" >2</string>
    <string name="tri" >3</string>
    <string name="cetiri" >4</string>
    <string name="pet" >5</string>
    <string name="sest" >6</string>
    <string name="sedam">7</string>
    <string name="osam" >8</string>
    <string name="devet" >9</string>

    <string name="resi">Resi</string>
    <string name="cisti">Ocisti</string>
    <string name="pomoc">Pomoc</string>
</resources>